<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/tvCongrat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/place_congratulations_default"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shimmer_container"
        app:layout_constraintVertical_bias="0.120000005" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFinalPhrase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/finish_phrase_lose"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCongrat"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/btnSendReview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/click_btn_review"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/write_review"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="@+id/tvFinalPhrase"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailFinish"/>

    <TextView
        android:id="@+id/tvTitlePlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_place"
        android:textColor="#fff"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:shimmer_auto_start="true"
        app:shimmer_duration="5000"
        app:layout_constraintEnd_toEndOf="@+id/tvTitlePlace"
        app:layout_constraintStart_toStartOf="@+id/tvTitlePlace"
        app:layout_constraintTop_toBottomOf="@+id/tvTitlePlace">

        <TextView
            android:id="@+id/tvPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text=""
            android:textColor="#fff"
            android:textSize="60sp" />

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmailTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/write_email"
        android:textAlignment="center"
        android:textColor="#fff"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFinalPhrase" />

    <TextView
        android:id="@+id/tvEmailFinish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="Загрузка..."
        android:textAlignment="center"
        android:textColor="#A0A0A0"
        android:textIsSelectable="true"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailTitle" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/emailGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tvEmailTitle,tvEmailFinish"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>